# mov-editor-by-claude

./: Cargo.toml  README.md  build.rs
src/: audio_waveform.rs  ffmpeg_decoder.rs  macos_video.rs  main.rs  mov_parser.rs
