[package]
name = "mov-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
egui = "0.28"
rfd = "0.14"
image = "0.25"
tokio = { version = "1.39", features = ["full"] }
crossbeam = "0.8"
av-data = "0.4"
symphonia = { version = "0.5", features = ["all"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-foundation = "0.9"
core-graphics = "0.23"
core-video = "0.1"